Add iCub contrib to root CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ project(object-tracking
 
 set(CMAKE_CXX_STANDARD 11)
 
+# iCub contrib
+find_package(ICUBcontrib REQUIRED)
+
 # Default build type to Release
 if(NOT CMAKE_CONFIGURATION_TYPES)
     if(NOT CMAKE_BUILD_TYPE)
@@ -17,6 +20,16 @@ endif()
 include(GNUInstallDirs)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}")
 
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake
+                              ${ICUBCONTRIB_MODULE_PATH}
+                              )
+include(ICUBcontribHelpers)
+include(ICUBcontribOptions)
+
+icubcontrib_set_default_prefix()
+icubcontrib_add_uninstall_target()
 
 add_subdirectory(src)
+
+
+
