Update object-tracking config file

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -61,3 +61,10 @@ observer_origin     (-0.3, 0.0, 0.4)
 noise_std           (0.002, 0.002, 0.002)
 # does the back of the object produce measurements (true/false)?
 back_culling        true
+
+[OBJECT]
+object_name         ycb_mustard
+
+[LOG]
+enable_log          false
+absolute_log_path
