Add parameter 'iol_object_name' to object-tracking default config file

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -64,6 +64,7 @@ back_culling        true
 
 [OBJECT]
 object_name         ycb_mustard
+iol_object_name     mustard
 
 [LOG]
 enable_log          false
