--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,11 @@ add_subdirectory(sfm-library)
 add_subdirectory(gaze-ctrl-library)
 add_subdirectory(object-tracking)
 
+option(BUILD_OBJECT_TRACKING_PLAYBACK "Build object-tracking-playback" OFF)
+if (BUILD_OBJECT_TRACKING_PLAYBACK)
+  add_subdirectory(object-tracking-playback)
+endif()
+
 option(BUILD_OBJECT_TRACKING_VIEWER "Build object-tracking-viewer" OFF)
 if (BUILD_OBJECT_TRACKING_VIEWER)
   add_subdirectory(object-tracking-viewer)
