Re-implement GazeController in order to use torse and head encoders in case the gaze interface is not available

--- a/src/gaze-ctrl-library/CMakeLists.txt
+++ b/src/gaze-ctrl-library/CMakeLists.txt
@@ -20,4 +20,5 @@ target_link_libraries(${LIBRARY_TARGET_NAME} PRIVATE
                                              YARP::YARP_OS
                                              YARP::YARP_math
                                              ${ICUB_LIBRARIES}
+                                             iKin
                                              )
