Update configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -3,12 +3,12 @@
 # 'simulation' (using simulated data),
 # 'play'       (using data acquired using data dumper)
 # 'robot'      (using the robot, either real or simulated in Gazebo)
-mode                simulation
+mode                robot
 robot               icub
 
 [INITIAL_CONDITION]
 # cartesian position
-x_0                 (-0.05, 0.05, -0.05)
+x_0                 (-0.3, 0.0, -0.0)
 # cartesian velocity
 v_0                 (0.0, 0.0, 0.0)
 # euler yaw-pith-roll
@@ -22,14 +22,14 @@ cov_eul_0           (0.1, 0.1, 0.1)
 cov_eul_dot_0       (0.1, 0.1, 0.1)
 
 [KINEMATIC_MODEL]
-sample_time         0.03
+sample_time         0.1
 # power spectral density (acceleration)
-psd_acc             (1.0, 1.0, 1.0)
+psd_acc             (0.001, 0.001, 0.001)
 # power spectral density (euler accelerations)
-psd_euler_acc       (1.0, 1.0, 1.0)
+psd_euler_acc       (0.001, 0.001, 0.001)
 
 [MEASUREMENT_MODEL]
-noise_covariance    (0.01, 0.01, 0.01)
+noise_covariance    (0.1, 0.1, 0.1)
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
@@ -64,8 +64,11 @@ back_culling        true
 
 [OBJECT]
 object_name         ycb_mustard
-iol_object_name     mustard
+iol_object_name     Bottle
+use_bbox_0          true
+bbox_tl_0           (156.0, 98.0)
+bbox_br_0           (212.0, 182.0)
 
 [LOG]
 enable_log          false
-absolute_log_path
+absolute_log_path   /home/npiga/output
