Changes to sfm_config.ini
Remove distortion from sfm_config.ini since input images are already undistorted.

Use opencv SGBM instead of libElas since point clouds behave better

--- a/src/object-tracking/conf/sfm_config.ini
+++ b/src/object-tracking/conf/sfm_config.ini
@@ -1,5 +1,5 @@
 robot              icub
-use_elas           true
+use_elas           false
 
 [CAMERA_CALIBRATION_RIGHT]
 projection         pinhole
@@ -11,10 +11,10 @@ fx 234.666
 fy 234.25
 cx 149.795
 cy 123.059
-k1 -0.425792
-k2 0.175221
-p1 0.000321599
-p2 -0.00175487
+k1 0.0
+k2 0.0
+p1 0.0
+p2 0.0
 
 [CAMERA_CALIBRATION_LEFT]
 projection         pinhole
@@ -26,10 +26,10 @@ fx 234.88
 fy 234.582
 cx 160.77
 cy 123.491
-k1 -0.412323
-k2 0.151472
-p1 0.000156673
-p2 0.0005931
+k1 0.0
+k2 0.0
+p1 0.0
+p2 0.0
 
 [STEREO_CALIBRATION_CONFIGURATION]
 boardWidth 8
