--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -8,28 +8,28 @@ robot               icub
 
 [INITIAL_CONDITION]
 # cartesian position
-x_0                 (-0.3, 0.0, -0.0)
+x_0                 (-0.4, 0.0, 0.0)
 # cartesian velocity
 v_0                 (0.0, 0.0, 0.0)
 # euler yaw-pith-roll
-euler_0             (0.0, 0.0, 0.0)
+euler_0             (0.9, 1.3, 2.3)
 # euler rates
 euler_dot_0         (0.0, 0.0, 0.0)
 # covariance
-cov_x_0             (0.01, 0.01, 0.01)
-cov_v_0             (0.001, 0.001, 0.001)
+cov_x_0             (0.1, 0.1, 0.1)
+cov_v_0             (0.1, 0.1, 0.1)
 cov_eul_0           (0.1, 0.1, 0.1)
 cov_eul_dot_0       (0.1, 0.1, 0.1)
 
 [KINEMATIC_MODEL]
-sample_time         0.1
+sample_time         0.03
 # power spectral density (acceleration)
 psd_acc             (0.001, 0.001, 0.001)
 # power spectral density (euler accelerations)
 psd_euler_acc       (0.001, 0.001, 0.001)
 
 [MEASUREMENT_MODEL]
-noise_covariance    (0.1, 0.1, 0.1)
+noise_covariance    (0.0001, 0.0001, 0.0001)
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
@@ -41,11 +41,11 @@ number_samples      500
 
 [SIMULATION]
 sample_time         0.03
-duration            20.0
+duration            10.0
 # power spectral density (acceleration)
-psd_acc             (0.01, 0.01, 0.01)
+psd_acc             (0.0, 0.0, 0.0)
 # power spectral density (angular acceleration)
-psd_w               (0.3, 0.3, 0.3)
+psd_w               (0.1, 0.07, 0.02)
 # initial conditions
 x_0                 (0.0, 0.0, 0.0)
 v_0                 (0.0, 0.0, 0.0)
@@ -58,7 +58,7 @@ w_0                 (0.0, 0.0, 0.0)
 number_points       1500
 observer_origin     (-0.3, 0.0, 0.4)
 # standard deviation of awgn
-noise_std           (0.002, 0.002, 0.002)
+noise_std           (0.004, 0.004, 0.004)
 # does the back of the object produce measurements (true/false)?
 back_culling        true
 
@@ -71,4 +71,4 @@ bbox_br_0           (212.0, 182.0)
 
 [LOG]
 enable_log          false
-absolute_log_path   /home/npiga/output
+absolute_log_path   /home/xenvre/output
