--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -151,6 +151,7 @@ endif()
 
 set(${EXE_TARGET_NAME}_CONF
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/config.ini
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf/config_simulation.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/sfm_config.ini
     )
 
