--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -8,28 +8,28 @@ robot               icub
 
 [INITIAL_CONDITION]
 # cartesian position
-x_0                 (-0.4, 0.0, 0.0)
+x_0                 (0.3, 0.16, 0.04)
 # cartesian velocity
 v_0                 (0.0, 0.0, 0.0)
 # euler yaw-pith-roll
-euler_0             (0.9, 1.3, 2.3)
+euler_0             (0.0, 0.0, 0.0)
 # euler rates
 euler_dot_0         (0.0, 0.0, 0.0)
 # covariance
-cov_x_0             (0.1, 0.1, 0.1)
-cov_v_0             (0.1, 0.1, 0.1)
-cov_eul_0           (0.1, 0.1, 0.1)
-cov_eul_dot_0       (0.1, 0.1, 0.1)
+cov_x_0             (0.01, 0.01, 0.01)
+cov_v_0             (0.01, 0.01, 0.01)
+cov_eul_0           (0.01, 0.01, 0.01)
+cov_eul_dot_0       (0.01, 0.01, 0.01)
 
 [KINEMATIC_MODEL]
-sample_time         0.03
-# power spectral density (acceleration)
-psd_acc             (0.001, 0.001, 0.001)
-# power spectral density (euler accelerations)
-psd_euler_acc       (0.001, 0.001, 0.001)
+sample_time         0.1
+q_x                 (0.001, 0.001, 0.001)
+q_x_dot             (0.01, 0.01, 0.01)
+q_eul               (0.01, 0.01, 0.01)
+q_eul_dot           (0.1, 0.1, 0.1)
 
 [MEASUREMENT_MODEL]
-noise_covariance    (0.0001, 0.0001, 0.0001)
+noise_covariance    (0.01, 0.01, 0.01)
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
@@ -41,7 +41,7 @@ number_samples      500
 
 [SIMULATION]
 sample_time         0.03
-duration            10.0
+duration            20.0
 # power spectral density (acceleration)
 psd_acc             (0.0, 0.0, 0.0)
 # power spectral density (angular acceleration)
@@ -70,5 +70,5 @@ bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
 
 [LOG]
-enable_log          false
+enable_log          true
 absolute_log_path   /home/xenvre/output
