Add parameters in default config file of module object-tracking:
- POINT_CLOUD_FILTERING/outlier_threshold
- MISC/send_bbox
- MISC/send_mask

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -39,6 +39,9 @@ kappa               0.0
 [POINT_CLOUD_PREDICTION]
 number_samples      500
 
+[POINT_CLOUD_FILTERING]
+outlier_threshold   0.1
+
 [SIMULATION]
 sample_time         0.03
 duration            20.0
@@ -72,3 +75,7 @@ bbox_br_0           (212.0, 182.0)
 [LOG]
 enable_log          true
 absolute_log_path   /home/xenvre/output
+
+[MISC]
+send_bbox           false
+send_mask           false
