--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -73,9 +73,9 @@ bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
 
 [LOG]
-enable_log          true
-absolute_log_path   /home/xenvre/output
+enable_log          false
+absolute_log_path
 
 [MISC]
-send_bbox           false
-send_mask           false
+send_bbox           true
+send_mask           true
