Disable log by default in config file of module object-tracking for simulation

--- a/src/object-tracking/conf/config_simulation.ini
+++ b/src/object-tracking/conf/config_simulation.ini
@@ -70,5 +70,5 @@ bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
 
 [LOG]
-enable_log          true
-absolute_log_path   /home/xenvre/output
+enable_log          false
+absolute_log_path
