--- a/src/sfm-library/src/SFMLib/CMakeLists.txt
+++ b/src/sfm-library/src/SFMLib/CMakeLists.txt
@@ -39,12 +39,11 @@ if (USE_OPENMP_SFMLib)
 endif()
 
 if(NOT TARGET Eigen3)
-    target_include_directories(${PROJECT_NAME} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-                                               PRIVATE ${EIGEN3_INCLUDE_DIR})
-    target_link_libraries(${PROJECT_NAME}      PUBLIC iCubGazeCtrlLibrary
-                                               PRIVATE stereoVision iKin ${OpenCV_LIBRARIES} ${YARP_LIBRARIES})
+    target_include_directories(${PROJECT_NAME} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> ${EIGEN3_INCLUDE_DIR})
+    target_link_libraries(${PROJECT_NAME}      PUBLIC iCubGazeCtrlLibrary stereoVision
+                                               PRIVATE iKin ${OpenCV_LIBRARIES} ${YARP_LIBRARIES})
 else()
     target_include_directories(${PROJECT_NAME} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
-    target_link_libraries(${PROJECT_NAME}      PUBLIC iCubGazeCtrlLibrary
-                                               PRIVATE stereoVision iKin Eigen3::Eigen ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} iCubGazeCtrlLibrary)
+    target_link_libraries(${PROJECT_NAME}      PUBLIC iCubGazeCtrlLibrary stereoVision Eigen3::Eigen
+                                               PRIVATE iKin ${OpenCV_LIBRARIES} ${YARP_LIBRARIES} iCubGazeCtrlLibrary)
 endif()
