Update default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -22,11 +22,11 @@ cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
 
 [KINEMATIC_MODEL]
-sample_time         0.1
-q_x                 (0.001, 0.001, 0.001)
-q_x_dot             (0.01, 0.01, 0.01)
-q_eul               (0.01, 0.01, 0.01)
-q_eul_dot           (0.1, 0.1, 0.1)
+sample_time         0.06
+q_x                 (0.0001, 0.0001, 0.0001)
+q_x_dot             (0.001, 0.001, 0.001)
+q_eul               (0.001, 0.001, 0.001)
+q_eul_dot           (0.01, 0.01, 0.01)
 
 [MEASUREMENT_MODEL]
 noise_covariance    (0.01, 0.01, 0.01)
@@ -41,6 +41,12 @@ number_samples      500
 
 [POINT_CLOUD_FILTERING]
 outlier_threshold   0.1
+
+[DEPTH]
+# if set to 'new_image', the filter will wait for new depth images to perform correction
+# if set to 'old_image', the filter will use the lastest depth image available
+# if set to 'skip', the filter will skip correction if a new depth image is not available
+fetch_mode          old_image
 
 [SIMULATION]
 sample_time         0.03
@@ -73,8 +79,8 @@ bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
 
 [LOG]
-enable_log          false
-absolute_log_path
+enable_log          true
+absolute_log_path   /home/npiga/output
 
 [MISC]
 send_bbox           true
