Add parameters regarding particle filtering in default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -5,8 +5,14 @@
 # 'robot'      (using the robot, either real or simulated in Gazebo)
 mode                robot
 robot               icub
+# filter can assume values 'ukf' or 'upf'
+filter_type         upf
+
+[PARTICLES]
+number              1
 
 [INITIAL_CONDITION]
+# Used in the UKF
 # cartesian position
 x_0                 (0.3, 0.16, 0.04)
 # cartesian velocity
@@ -15,11 +21,17 @@ v_0                 (0.0, 0.0, 0.0)
 euler_0             (0.0, 0.0, 0.0)
 # euler rates
 euler_dot_0         (0.0, 0.0, 0.0)
+
+# Used in both UKF and UPF
 # covariance
 cov_x_0             (0.01, 0.01, 0.01)
 cov_v_0             (0.01, 0.01, 0.01)
 cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
+
+# Used in UPF to initialized the state randomly
+center_0            (0.0, 0.0, 0.0)
+radius_0            (0.4, 0.4, 0.4)
 
 [KINEMATIC_MODEL]
 sample_time         0.06
