--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -9,7 +9,7 @@ robot               icub
 filter_type         upf
 
 [PARTICLES]
-number              1
+number              2
 
 [INITIAL_CONDITION]
 # Used in the UKF
@@ -91,8 +91,8 @@ bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
 
 [LOG]
-enable_log          true
-absolute_log_path   /home/npiga/output
+enable_log          false
+absolute_log_path
 
 [MISC]
 send_bbox           true
