Add parameter DEPTH/u_stride and DEPTH/v_stride in default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -59,6 +59,8 @@ outlier_threshold   0.1
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
 fetch_mode          old_image
+u_stride            2
+v_stride            2
 
 [SIMULATION]
 sample_time         0.03
