Add parameter LIKELIHOOD/variance in default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -11,6 +11,9 @@ filter_type         upf
 [PARTICLES]
 number              2
 
+[LIKELIHOOD]
+variance            0.01
+
 [INITIAL_CONDITION]
 # Used in the UKF
 # cartesian position
