Update default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -9,10 +9,10 @@ robot               icub
 filter_type         upf
 
 [PARTICLES]
-number              2
+number              5
 
 [LIKELIHOOD]
-variance            0.01
+variance            0.05
 
 [INITIAL_CONDITION]
 # Used in the UKF
@@ -37,10 +37,12 @@ center_0            (0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4)
 
 [KINEMATIC_MODEL]
-sample_time         0.06
-q_x                 (0.0001, 0.0001, 0.0001)
+sample_time         0.01
+q_x                 (0.01, 0.01, 0.01)
+q_eul               (0.5, 0.5, 0.5)
+
+# not used anymore
 q_x_dot             (0.001, 0.001, 0.001)
-q_eul               (0.001, 0.001, 0.001)
 q_eul_dot           (0.01, 0.01, 0.01)
 
 [MEASUREMENT_MODEL]
@@ -52,7 +54,7 @@ beta                2.0
 kappa               0.0
 
 [POINT_CLOUD_PREDICTION]
-number_samples      500
+number_samples      1000
 
 [POINT_CLOUD_FILTERING]
 outlier_threshold   0.1
@@ -61,7 +63,7 @@ outlier_threshold   0.1
 # if set to 'new_image', the filter will wait for new depth images to perform correction
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
-fetch_mode          old_image
+fetch_mode          skip
 u_stride            2
 v_stride            2
 
