Update default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -6,13 +6,19 @@
 mode                robot
 robot               icub
 # filter can assume values 'ukf' or 'upf'
-filter_type         upf
+filter_type         ukf
 
 [PARTICLES]
 number              5
 
 [LIKELIHOOD]
 variance            0.05
+
+[POINT_ESTIMATE]
+# Used in the UPF
+method              smean
+# warning: this affects also the projection on the 2d plane
+window_size         10
 
 [INITIAL_CONDITION]
 # Used in the UKF
@@ -37,9 +43,12 @@ center_0            (0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4)
 
 [KINEMATIC_MODEL]
-sample_time         0.01
-q_x                 (0.01, 0.01, 0.01)
-q_eul               (0.5, 0.5, 0.5)
+# for ukf
+sample_time         0.02
+# for upf
+# sample_time         0.05
+q_x                 (0.03, 0.03, 0.03)
+q_eul               (0.09, 0.09, 0.09)
 
 # not used anymore
 q_x_dot             (0.001, 0.001, 0.001)
@@ -63,7 +72,7 @@ outlier_threshold   0.1
 # if set to 'new_image', the filter will wait for new depth images to perform correction
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
-fetch_mode          skip
+fetch_mode          old_image
 u_stride            2
 v_stride            2
 
