--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -72,6 +72,10 @@ fetch_mode          old_image
 u_stride            2
 v_stride            2
 
+[HAND_OCCLUSION]
+handle_occlusion    true
+laterality          right
+
 [SIMULATION]
 sample_time         0.03
 duration            20.0
